--- a/BBSports/BBSports.csproj
+++ b/BBSports/BBSports.csproj
@@ -57,6 +57,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
@@ -80,31 +81,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Athletes.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+    <Compile Include="ActivateSport.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="BBSportsDataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>BBSportsDataSet.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="CoachedBy.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Coaches.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+    <Compile Include="ActivateSport.Designer.cs">
+      <DependentUpon>ActivateSport.cs</DependentUpon>
     </Compile>
     <Compile Include="MeetManager.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MeetManager.Designer.cs">
       <DependentUpon>MeetManager.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Meets.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Meets.Designer.cs">
-      <DependentUpon>Meets.cs</DependentUpon>
     </Compile>
     <Compile Include="HomePage.cs">
       <SubType>Form</SubType>
@@ -118,34 +105,13 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model1.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model1.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.edmx</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Roster.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Sports.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
+    <EmbeddedResource Include="ActivateSport.resx">
+      <DependentUpon>ActivateSport.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MeetManager.resx">
       <DependentUpon>MeetManager.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Meets.resx">
-      <DependentUpon>Meets.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HomePage.resx">
       <DependentUpon>HomePage.cs</DependentUpon>
@@ -162,24 +128,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EntityDeploy Include="Model1.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="BBSportsDataSet.xsc">
-      <DependentUpon>BBSportsDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="BBSportsDataSet.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>BBSportsDataSet.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="BBSportsDataSet.xss">
-      <DependentUpon>BBSportsDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="Model1.edmx.diagram">
-      <DependentUpon>Model1.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -196,23 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="BBSports.edmx.sql" />
-    <Content Include="BBSports.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="BBSports_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>BBSports.mdf</DependentUpon>
-    </Content>
-    <Content Include="Model1.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Model1.Context.cs</LastGenOutput>
-      <DependentUpon>Model1.edmx</DependentUpon>
-    </Content>
-    <Content Include="Model1.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Model1.cs</LastGenOutput>
-      <DependentUpon>Model1.edmx</DependentUpon>
-    </Content>
+    <Content Include="SQLQuery5.sql" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
