Figured out MDI Form relations, tweaked manage meet page, discovered how to correctly maximize child forms, added generic racing form for racing sports.

--- a/BBSports/App.config
+++ b/BBSports/App.config
@@ -8,10 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="BurritoContainer" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\Tyler\Documents\BBSports.mdf;integrated security=True;connect timeout=30;encrypt=False;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="BBSports.Properties.Settings.BBSportsConnectionString"
-      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\BBSports.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=False"
+    <add name="BBSports.DB"
+      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Tyler\documents\visual studio 2017\Projects\BBSports\BBSports\BBSports.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=False"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
