--- a/BBSports/BBSports.csproj
+++ b/BBSports/BBSports.csproj
@@ -87,12 +87,6 @@
     <Compile Include="ActivateSport.Designer.cs">
       <DependentUpon>ActivateSport.cs</DependentUpon>
     </Compile>
-    <Compile Include="MeetManager.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MeetManager.Designer.cs">
-      <DependentUpon>MeetManager.cs</DependentUpon>
-    </Compile>
     <Compile Include="HomePage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,19 +99,31 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="MeetManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MeetManager.Designer.cs">
+      <DependentUpon>MeetManager.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Racing.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Racing.Designer.cs">
+      <DependentUpon>Racing.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="ActivateSport.resx">
       <DependentUpon>ActivateSport.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MeetManager.resx">
-      <DependentUpon>MeetManager.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HomePage.resx">
       <DependentUpon>HomePage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MeetManager.resx">
+      <DependentUpon>MeetManager.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -128,6 +134,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Racing.resx">
+      <DependentUpon>Racing.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
