--- a/BBSports/BBSports.csproj
+++ b/BBSports/BBSports.csproj
@@ -75,6 +75,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComboBoxItem.cs" />
+    <Compile Include="CommonQueries.cs" />
     <Compile Include="HomePage.cs">
       <SubType>Form</SubType>
     </Compile>
