Switched over to the new database and added password hashing, login logic, ported over the tables from localDB, been renaming changes in the system. Deleted App project I used for learning.

--- a/BBSports/App.config
+++ b/BBSports/App.config
@@ -9,7 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="BBSports.DB"
-      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Tyler\documents\visual studio 2017\Projects\BBSports\BBSports\BBSports.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=False"
+      connectionString="Data Source=crunchtime.database.windows.net;Initial Catalog=BBSports;Persist Security Info=True;User ID=Henkemeyer;Password=RunCity2030;Connect Timeout=30;ConnectRetryInterval=2"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
