--- a/BBSports/BBSports.csproj
+++ b/BBSports/BBSports.csproj
@@ -114,6 +114,12 @@
     <Compile Include="MeetManager.Designer.cs">
       <DependentUpon>MeetManager.cs</DependentUpon>
     </Compile>
+    <Compile Include="NewUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewUser.Designer.cs">
+      <DependentUpon>NewUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Racing.cs">
@@ -128,6 +134,7 @@
     <Compile Include="Roster.Designer.cs">
       <DependentUpon>Roster.cs</DependentUpon>
     </Compile>
+    <Compile Include="SaltNPepper.cs" />
     <Compile Include="TeamManager.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -151,6 +158,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MeetManager.resx">
       <DependentUpon>MeetManager.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewUser.resx">
+      <DependentUpon>NewUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
