Added in new administration page that immediatly loads the team page and assigned the user as a director. Made some additional tweaks to move things to the new DB/server

--- a/BBSports/App.config
+++ b/BBSports/App.config
@@ -8,8 +8,12 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="BBSports.DB"
-      connectionString="Data Source=crunchtime.database.windows.net;Initial Catalog=BBSports;Persist Security Info=True;User ID=Henkemeyer;Password=RunCity2030;Connect Timeout=30;ConnectRetryInterval=2"
+    <add name="BBSports.DB" connectionString="Data Source=crunchtime.database.windows.net;Initial Catalog=BBSports;Persist Security Info=True;User ID=Henkemeyer;Password=RunCity2030;Connect Timeout=30;ConnectRetryInterval=2"
+      providerName="System.Data.SqlClient" />
+    <add name="BBSports.Properties.Settings.BBSportsConnectionString"
+      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\BBSports.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=False"
+      providerName="System.Data.SqlClient" />
+    <add name="BBSports.Properties.Settings.BBSportsCS" connectionString="Data Source=crunchtime.database.windows.net;Initial Catalog=BBSports;Persist Security Info=True;User ID=Henkemeyer;Password=RunCity2030;Connect Timeout=30;ConnectRetryInterval=2"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
