--- a/BBSports/BBSports.csproj
+++ b/BBSports/BBSports.csproj
@@ -79,7 +79,7 @@
     <Compile Include="ComboBoxItem.cs" />
     <Compile Include="CommonQueries.cs" />
     <Compile Include="Directory.cs">
-      <SubType>Form</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Directory.Designer.cs">
       <DependentUpon>Directory.cs</DependentUpon>
@@ -113,6 +113,12 @@
     </Compile>
     <Compile Include="MeetManager.Designer.cs">
       <DependentUpon>MeetManager.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NewOrg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewOrg.Designer.cs">
+      <DependentUpon>NewOrg.cs</DependentUpon>
     </Compile>
     <Compile Include="NewUser.cs">
       <SubType>Form</SubType>
@@ -158,6 +164,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MeetManager.resx">
       <DependentUpon>MeetManager.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewOrg.resx">
+      <DependentUpon>NewOrg.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NewUser.resx">
       <DependentUpon>NewUser.cs</DependentUpon>
@@ -218,6 +227,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\DataSources\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
