Moved directory to a form since it was easier to control. Athlete manager now opens the new directory.

--- a/BBSports/BBSports.csproj
+++ b/BBSports/BBSports.csproj
@@ -79,7 +79,7 @@
     <Compile Include="ComboBoxItem.cs" />
     <Compile Include="CommonQueries.cs" />
     <Compile Include="Directory.cs">
-      <SubType>UserControl</SubType>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Directory.Designer.cs">
       <DependentUpon>Directory.cs</DependentUpon>
