--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
+  "name": "bbsports",
+  "version": "1.0.0",
+  "description": "app to enhance communication between athletes and coaches",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
@@ -13,8 +17,13 @@
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "bcrypt": "^5.0.1",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.13",
+    "nodemon": "^2.0.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
