--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "ws": ">=5.2.3"
+    "ws": ">=5.2.3",
+    "expo-app-loading": "~1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
