--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/checkbox": "^0.5.8",
-    "@react-native-community/datetimepicker": "4.0.0",
+    "@react-native-community/datetimepicker": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-picker/picker": "2.2.1",
     "@react-navigation/bottom-tabs": "^5.11.11",
@@ -23,6 +23,8 @@
     "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
     "expo": "^44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-dev-client": "~0.8.5",
     "expo-status-bar": "~1.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -36,6 +38,7 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-select-dropdown": "^1.13.0",
     "react-native-stopwatch-timer": "0.0.21",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
@@ -43,8 +46,7 @@
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "ws": ">=5.2.3",
-    "expo-app-loading": "~1.3.0"
+    "ws": ">=5.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
