--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-select-dropdown": "^1.13.0",
     "react-native-stopwatch-timer": "0.0.21",
+    "react-native-table-component": "^1.2.2",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
