--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
+    "date-fns": "^2.29.2",
     "expo": "^44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-dev-client": "~0.8.6",
@@ -40,7 +41,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-select-dropdown": "^1.13.0",
     "react-native-stopwatch-timer": "0.0.21",
-    "react-native-table-component": "^1.2.2",
+    "react-native-table-component": "^1.2.0",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
