--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "ws": ">=5.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react-native": "~0.64.12",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
