--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "nodemon": "^2.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-dropdown-select": "^4.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-44.0.0.tar.gz",
     "react-native-calendars": "^1.1282.0",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-multiple-select": "^0.5.11",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
