--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/checkbox": "^0.5.8",
-    "@react-native-community/datetimepicker": "^4.0.0",
+    "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-picker/picker": "2.2.1",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
@@ -23,27 +23,27 @@
     "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
     "date-fns": "^2.29.2",
-    "expo": "^44.0.0",
-    "expo-app-loading": "~1.3.0",
-    "expo-dev-client": "~0.8.6",
-    "expo-status-bar": "~1.2.0",
+    "expo": "^47.0.0",
+    "expo-app-loading": "~2.1.1",
+    "expo-dev-client": "~2.0.1",
+    "expo-status-bar": "~1.4.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
     "nodemon": "^2.0.7",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-44.0.0.tar.gz",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-47.0.0.tar.gz",
     "react-native-calendars": "^1.1282.0",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-multiple-select": "^0.5.11",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-select-dropdown": "^1.13.0",
     "react-native-stopwatch-timer": "^0.0.21",
     "react-native-table-component": "^1.2.0",
-    "react-native-web": "0.17.1",
+    "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.4",
@@ -52,9 +52,9 @@
     "ws": ">=5.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
+    "@babel/core": "^7.19.3",
+    "@types/react-native": "~0.70.6",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
