--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "nodemon": "^2.0.7",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-47.0.0.tar.gz",
+    "react-native": "^0.70.5",
     "react-native-calendars": "^1.1282.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-multiple-select": "^0.5.11",
