--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "BBSports",
-    "slug": "BBSports",
+    "name": "Coaches Log",
+    "slug": "Coaches Log",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
