--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/storage": "^18.3.0",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.8",
@@ -26,6 +27,7 @@
     "expo": "^47.0.0",
     "expo-app-loading": "~2.1.1",
     "expo-dev-client": "~2.0.1",
+    "expo-image-picker": "^14.3.2",
     "expo-status-bar": "~1.4.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -36,7 +38,9 @@
     "react-native": "0.70.8",
     "react-native-calendars": "^1.1282.0",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-image-picker": "^5.6.0",
     "react-native-multiple-select": "^0.5.11",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
